Added footer section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/content.css">
+	<link rel="stylesheet" type="text/css" href="css/footer.css">
 	<title>Hulix</title>
 </head>
 
@@ -118,7 +119,7 @@
 				</div>
 				<div class="film-item"><img class="film-thumb" src="img/films/thejoker.jpg">
 					<div class="film-desc">
-						<div class="film-name">Tthe Joker</div>
+						<div class="film-name">The Joker</div>
 						<div class="film-tag"><b>Tags</b>: Action, Psychological</div>
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
@@ -137,44 +138,48 @@
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
 				</div>
-				<div class="film-item"><img class="film-thumb" src="img/films/21jumpstreet.jpg">
+				<div class="film-item"><img class="film-thumb" src="img/films/jumanji.jpg">
 					<div class="film-desc">
-						<div class="film-name">21 Jump Street</div>
-						<div class="film-tag"><b>Tags</b>: Fantasy, Animation</div>
+						<div class="film-name">Jumanji</div>
+						<div class="film-tag"><b>Tags</b>: Fantasy, Adventure</div>
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
 				</div>
-				<div class="film-item"><img class="film-thumb" src="img/films/21jumpstreet.jpg">
+				<div class="film-item"><img class="film-thumb" src="img/films/Beetlejuice.jpg">
 					<div class="film-desc">
-						<div class="film-name">21 Jump Street</div>
-						<div class="film-tag"><b>Tags</b>: Fantasy, Animation</div>
+						<div class="film-name">Beetlejuice</div>
+						<div class="film-tag"><b>Tags</b>: Comedy, Horror</div>
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
 				</div>
-				<div class="film-item"><img class="film-thumb" src="img/films/21jumpstreet.jpg">
+				<div class="film-item"><img class="film-thumb" src="img/films/Oblivion.jpg">
 					<div class="film-desc">
-						<div class="film-name">21 Jump Street</div>
-						<div class="film-tag"><b>Tags</b>: Fantasy, Animation</div>
+						<div class="film-name">Oblivion</div>
+						<div class="film-tag"><b>Tags</b>: Action</div>
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
 				</div>
-				<div class="film-item"><img class="film-thumb" src="img/films/21jumpstreet.jpg">
+				<div class="film-item"><img class="film-thumb" src="img/films/takedown.jpg">
 					<div class="film-desc">
-						<div class="film-name">21 Jump Street</div>
-						<div class="film-tag"><b>Tags</b>: Fantasy, Animation</div>
+						<div class="film-name">Takedown</div>
+						<div class="film-tag"><b>Tags</b>: Action, Thriller</div>
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
 				</div>
-				<div class="film-item"><img class="film-thumb" src="img/films/21jumpstreet.jpg">
+				<div class="film-item"><img class="film-thumb" src="img/films/thehowling.jpg">
 					<div class="film-desc">
-						<div class="film-name">21 Jump Street</div>
-						<div class="film-tag"><b>Tags</b>: Fantasy, Animation</div>
+						<div class="film-name">The Howling</div>
+						<div class="film-tag"><b>Tags</b>: Horror</div>
 						<div class="love-icon"><img onclick="loved(this)" src="img/like.png"></div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<footer class="ftr-container">
+		
+	</footer>
 </body>
 <script defer="defer" src="js/greetchange.js"></script>
 <script defer="defer" src="js/lovedfilm.js"></script>
