added footer section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
 	</div>
 
 	<footer class="ftr-container">
+		<div class="ftr-divider">
+			<p>Hulix Inc &copy, mondial leader of media enterntainment.</p>
+			<p style="padding-bottom: 20px; font-size: 12px;">This site uses biscuits to deliver services in accordance with this Privacy Policy.</p>
+			<p>Copyright &copy 2021 Hulix Inc. All right reserved.</p>
+			<div class="social-container">
+			
+			</div>
+		</div>
 		
 	</footer>
 </body>
