cleaned up interface

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="css/content.css">
+	<link rel="stylesheet" type="text/css" href="css/indexpage.css">
 	<link rel="stylesheet" type="text/css" href="css/footer.css">
 	<title>Hulix</title>
 </head>
@@ -19,9 +19,9 @@
 					<button>Join Us</button>
 				</div>
 				<ul class="navbar-buttons">
-					<li><a class="navbar-button" href="#">HOME</a></li>
-					<li><a class="navbar-button" href="#">MY LIBRARY</a></li>
-					<li><a class="navbar-button" href="#">MY ACCOUNT</a></li>
+					<li><a href="#">HOME</a></li>
+					<li><a href="pages/library.html">MY LIBRARY</a></li>
+					<li><a href="#">MY ACCOUNT</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -198,6 +198,5 @@
 	</footer>
 </body>
 <script defer="defer" src="js/greetchange.js"></script>
-<script defer="defer" src="js/expandsearch.js"></script>
 <script defer="defer" src="js/lovedfilm.js"></script>
 </html>
