added headers for sections

--- a/pages/library.html
+++ b/pages/library.html
@@ -27,6 +27,11 @@
         </nav>
     </header>
     <div class="content-container">
+        <header>
+            <div class="heading-border">
+                <h1 id="heading">Your Library</h1>
+            </div>
+        </header>
         <div class="film-presentation">
             <div class="film-main">
                 <div class="watch-hov">
@@ -94,13 +99,30 @@
                 </div>
             </div>
         </div>
-        <div class="carousel" data-flickity='{"wrapAround": true, "autoPlay": 1400}'>
-            <div class="carousel-cell"></div>
-            <div class="carousel-cell"></div>
-            <div class="carousel-cell"></div>
-            <div class="carousel-cell"></div>
-            <div class="carousel-cell"></div>
-            <div class="carousel-cell"></div>
+        <header>
+            <div class="heading-border">
+                <h1 id="heading">Coming soon</h1>
+            </div>
+        </header>
+        <div class="carousel" data-flickity='{"wrapAround": true, "autoPlay": 1100}'>
+            <div class="carousel-cell">
+                <img class="carousel-image" src="../img/trailerfilms/f13.jpg">
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-image" src="../img/trailerfilms/it.png">
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-image" src="../img/trailerfilms/pharaos.jpg">
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-image" src="../img/trailerfilms/troy.jpg">
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-image" src="../img/trailerfilms/venom.jpg">
+            </div>
+            <div class="carousel-cell">
+                <img class="carousel-image" src="../img/trailerfilms/spongebob.jpg">
+            </div>
         </div>
     </div>
     <footer class="ftr-container">
